RESOLVED FIXED69497
[Chromium] Complex script code path breaks on Windows XP when a CFF font is used
https://bugs.webkit.org/show_bug.cgi?id=69497
Summary [Chromium] Complex script code path breaks on Windows XP when a CFF font is used
Kenichi Ishibashi
Reported 2011-10-05 19:55:27 PDT
See http://crbug.com/39017 for details.
Attachments
Patch (3.04 KB, patch)
2011-10-05 20:21 PDT, Kenichi Ishibashi
no flags
Patch for landing (3.11 KB, patch)
2011-10-10 20:51 PDT, Kenichi Ishibashi
no flags
Patch for landing (3.02 KB, patch)
2011-10-11 01:16 PDT, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2011-10-05 20:21:28 PDT
Behdad Esfahbod
Comment 2 2011-10-06 14:16:24 PDT
(In reply to comment #1) > Created an attachment (id=109909) [details] > Patch LGTM.
Kent Tamura
Comment 3 2011-10-06 22:39:49 PDT
Comment on attachment 109909 [details] Patch Rubber-stamped.
Kenichi Ishibashi
Comment 4 2011-10-10 20:51:09 PDT
Created attachment 110467 [details] Patch for landing
WebKit Review Bot
Comment 5 2011-10-11 01:09:11 PDT
Comment on attachment 110467 [details] Patch for landing Rejecting attachment 110467 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: hangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/10032269
Kenichi Ishibashi
Comment 6 2011-10-11 01:16:13 PDT
Created attachment 110485 [details] Patch for landing
WebKit Review Bot
Comment 7 2011-10-11 01:37:52 PDT
Comment on attachment 110485 [details] Patch for landing Clearing flags on attachment: 110485 Committed r97133: <http://trac.webkit.org/changeset/97133>
WebKit Review Bot
Comment 8 2011-10-11 01:37:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.